--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         <div class="sec-no">04 / COMPANY</div>
         <h2>会社概要</h2>
       </div>
-      <span class="tag">※内容はドラフト</span>
+      <span class="tag">※住所等は確定後に更新</span>
     </div>
 
     <div class="grid-2">
@@ -485,8 +485,8 @@
         <h3>DEN&DA株式会社</h3>
         <p>
           代表：王 恒毅（社長 兼 ITコンサルティング総監）<br>
-          事業：ITコンサルティング／業務改革支援／貿易DX支援<br>
-          拠点：日本（※住所は確定後に記載）
+          事業：ITコンサルティング／業務改革支援／貿易DX支援／士業向けCRM・業務SaaS開発<br>
+          所在地：東京都（※住所は確定後に記載）
         </p>
       </div>
       <div class="card">
