--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <p>
           代表：王 恒毅（社長 兼 ITコンサルティング総監）<br>
           事業：ITコンサルティング／業務改革支援／貿易DX支援／士業向けCRM・業務SaaS開発<br>
-          所在地：東京都（※住所は確定後に記載）
+          所在地：〒169-0073 東京都新宿区百人町1-18-8 大久保カドビル 404室
         </p>
       </div>
       <div class="card">
