--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <a href="#approach">進め方</a>
         <a href="#industries">得意領域</a>
         <a href="#company">会社概要</a>
-        <a href="#https://forms.gle/nBZxEDoX9oUJhkh69" class="cta">お問い合わせ</a>
+        <a href="https://forms.gle/nBZxEDoX9oUJhkh69" class="cta">お問い合わせ</a>
       </nav>
     </div>
   </div>
@@ -262,7 +262,7 @@
             <h1 class="hero-title">業務を、つなぐ。<br>仕組みを、整える。</h1>
             <p class="hero-sub">DEN&DA株式会社は、業務プロセス分析／既存システム診断／最適なITソリューション設計／技術アーキテクチャ最適化／導入支援に加え、行政書士事務所など士業向けCRM・業務SaaSの開発を通じて、現場の「詰まり」を解消し、成果につながるDXを実現します。</p>
             <div class="hero-actions">
-              <a class="btn primary" href="#https://forms.gle/gQUnKFTzrRpvdpANA">無料相談（初回）</a>
+              <a class="btn primary" href="https://forms.gle/gQUnKFTzrRpvdpANA">無料相談（初回）</a>
               <a class="btn" href="#services">提供サービスを見る</a>
             </div>
           </div>
