--- a/index.html
+++ b/index.html
@@ -547,7 +547,9 @@
             <label for="msg">ご相談内容</label>
             <textarea id="msg" name="msg" placeholder="課題・背景・期待する成果を簡単にご記入ください"></textarea>
           </div>
-          <button class="btn primary" type="submit">送信（デモ）</button>
+         <a class="btn primary" href="https://forms.gle/你的链接" target="_blank" rel="noopener">
+  送信（無料相談）
+</a>
           <p style="margin:8px 0 0; color:var(--muted); font-size:12px; line-height:1.6;">
             ※このフォームはデモです。実運用では送信先（メール/CRM）連携を実装します。
           </p>
