--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
             <label for="msg">ご相談内容</label>
             <textarea id="msg" name="msg" placeholder="課題・背景・期待する成果を簡単にご記入ください"></textarea>
           </div>
-         <a class="btn primary" href="https://forms.gle/你的链接" target="_blank" rel="noopener">
+         <a class="btn primary" href="https://forms.gle/XA7bbcbPSdgsgyzH6" target="_blank" rel="noopener">
   送信（無料相談）
 </a>
           <p style="margin:8px 0 0; color:var(--muted); font-size:12px; line-height:1.6;">
@@ -563,7 +563,7 @@
   <div class="container">
     <div class="foot">
       <div>© <span id="y"></span> DEN&DA株式会社</div>
-      <div style="opacity:.9;">Designed in Japanese minimal style (inspired by kings-z.com)</div>
+      <div style="opacity:.9;">Designed in Japanese </div>
     </div>
   </div>
 </footer>
