--- a/index.html
+++ b/index.html
@@ -262,7 +262,12 @@
             <h1 class="hero-title">業務を、つなぐ。<br>仕組みを、整える。</h1>
             <p class="hero-sub">DEN&DA株式会社は、業務プロセス分析／既存システム診断／最適なITソリューション設計／技術アーキテクチャ最適化／導入支援に加え、行政書士事務所など士業向けCRM・業務SaaSの開発を通じて、現場の「詰まり」を解消し、成果につながるDXを実現します。</p>
             <div class="hero-actions">
-              <a class="btn primary" href="https://forms.gle/gQUnKFTzrRpvdpANA">無料相談（初回）</a>
+              <a class="btn primary"
+   href="https://forms.gle/gQUnKFTzrRpvdpANA"
+   target="_blank"
+   rel="noopener">
+  無料相談（初回）
+</a>
               <a class="btn" href="#services">提供サービスを見る</a>
             </div>
           </div>
