--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         <div class="sec-no">05 / CONTACT</div>
         <h2>お問い合わせ</h2>
       </div>
-      <span class="tag">Google Form（ゼロコード）</span>
+      <span class="tag">お問い合わせ（フォーム）</span>
     </div>
 
     <div class="contact">
@@ -484,14 +484,14 @@
       <div class="card">
         <h3>フォーム</h3>
         <p style="margin:0 0 14px; color:var(--muted); font-size:13px; line-height:1.8;">
-          下のボタンからGoogleフォームを開いて送信してください。送信内容はあなたのGmailに届きます。
+          下のボタンからGoogleフォームを開いて送信してください。フォーム送信後、内容を確認の上、担当よりご連絡いたします。
         </p>
         <a class="btn primary"
            href="https://forms.gle/XA7bbcbPSdgsgyzH6"
            target="_blank"
            rel="noopener"
            onclick="window.open(this.href,'_blank','noopener'); return false;">
-          フォームを開く（無料相談）
+          無料相談（初回）
         </a>
       </div>
     </div>
