--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
       <div class="card">
         <h3>DEN&DA株式会社</h3>
         <p>
-          代表：王 恒毅<br>
-          所在地：東京（詳細は確定後に更新）<br>
+          代表取締役：王 恒毅<br>
+          所在地：〒169-0073 東京都新宿区百人町1-18-8 大久保カドビル 404室<br>
           事業：ITコンサルティング／業務改革支援／貿易DX支援／士業向けCRM・業務SaaS開発
         </p>
       </div>
